# evk

./: .gitignore  CMakeLists.txt  README.MD
assets/texture/: devtextures.psd
evk/include/: evk.c  evk.h  evk_impl.h  evk_types.h  evk_vulkan_core.c  evk_vulkan_core.h  evk_vulkan_core_impl.h  evk_vulkan_drawable.h  evk_vulkan_drawable_impl.h  evk_vulkan_renderphase.c  evk_vulkan_renderphase.h  evk_vulkan_renderphase_impl.h
evk/include/shader/: grid_frag_spv.c  grid_vert_spv.h  quad_default_frag_spv.c  quad_default_vert_spv.c  quad_picking_frag_spv.c  quad_picking_vert_spv.c  sprite_default_frag_spv.h  sprite_default_vert_spv.h  sprite_picking_frag_spv.h  sprite_picking_vert_spv.h
examples/: example_win32.c
tools/roadmap/: roadmap.psd
tools/shader_dev/: _compile.py  grid.frag  grid.vert  quad_default.frag  quad_default.vert  quad_picking.frag  quad_picking.vert  sprite_default.frag  sprite_default.vert  sprite_picking.vert
tools/shader_dev/include/: constants.glsl  function.glsl  quad.glsl  sprite.glsl  ubo_camera.glsl  ubo_quad.glsl  ubo_sprite.glsl
